--- a/index.html
+++ b/index.html
@@ -20,19 +20,31 @@
         let params = new URLSearchParams(window.location.search);
 
         let token = params.get('token');
+
+        const currentDate = new Date();
+        const startOfMonth = new Date(currentDate.getFullYear(), currentDate.getMonth(), 1);
+        const endOfMonth = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0);
+        
+        const startDate = startOfMonth.toISOString().split('T')[0];
+        const endDate = endOfMonth.toISOString().split('T')[0];
+        
         fetch('https://dev.lunchmoney.app/v1/budgets', {
             headers: {
-                'Authorization': `Bearer ${token}`
-            }
-        })
-            .then(response => response.json())
-            .then(data => {
-                const formattedData = JSON.stringify(data, null, 2);
-                const pre = document.createElement('pre');
-                pre.textContent = formattedData;
-                document.body.appendChild(pre);
+            'Authorization': `Bearer ${token}`
+            },
+            body: JSON.stringify({
+            start_date: startDate,
+            end_date: endDate
             })
-            .catch(error => console.error(error));
+        })
+        .then(response => response.json())
+        .then(data => {
+            const formattedData = JSON.stringify(data, null, 2);
+            const pre = document.createElement('pre');
+            pre.textContent = formattedData;
+            document.body.appendChild(pre);
+        })
+        .catch(error => console.error(error));
     </script>
 </body>
 </html>
