--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
         const endDate = endOfMonth.toISOString().split('T')[0];
         
         fetch('https://dev.lunchmoney.app/v1/budgets', {
+            method: 'POST',
             headers: {
-            'Authorization': `Bearer ${token}`
+                'Authorization': `Bearer ${token}`,
+                'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-            start_date: startDate,
-            end_date: endDate
+                start_date: startDate,
+                end_date: endDate
             })
         })
         .then(response => response.json())
