--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="script/style.css">
 </head>
-</head>
 <body>
     <div>
-        <div class="container income">
+        <div>
             <h4>Income</h4>
+            <div class="container income">
+            </div>
         </div>
-        <div class="container expenses">
+        <div">
             <h4>Expenses</h4>
+            <div class="container expenses">
+            </div>
         </div>
     </div>
+
+    <a href="#" class="refresh-icon" onclick="update()">
+        <img id="refresh" src="assets/refresh-circle-svgrepo-com.svg" class="refresh-icon"></img>
+    </a>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
