--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <a href="#" class="refresh-icon" onclick="update()">
+    <a href="#" class="refresh-icon" onclick="updateBudget()">
         <img id="refresh" src="assets/refresh-circle-svgrepo-com.svg" class="refresh-icon"></img>
     </a>
 
