category_name->notes

--- a/expenses.html
+++ b/expenses.html
@@ -27,8 +27,8 @@
                     <thead>
                         <tr>
                             <th data-field="date">Date</th>
-                            <th data-field="category_name">Category</th>
                             <th data-field="display_name">Payee</th>
+                            <th data-field="notes">Notes</th>
                             <th data-field="amount" data-formatter='priceFormatter'>Amount</th>
                         </tr>
                     </thead>
